@@ -1,3 +1,7 @@
+2003-03-08    John E. Joganic <john@joganic.com>
+
+	* Added curses functionality to xidump.c, now default
+
 2003-03-07    John E. Joganic <john@joganic.com>
 
 	* Added tabletdev.c framework (based on mousedev.c)
